# RecycleIT

./: .gitignore  DATA_INGESTION_ARCHITECTURE.md  DEPLOYMENT.md  PLAN.md  README.md  SUSTAINABILITY_METRICS.md  attest_err.txt  err.txt  generate_journey.py  qr_gen_out.txt  render.yaml  setup_demo.py  traceability.db  traceability_report.json  traceability_report_scenario_1.json  traceability_report_scenario_2.json
backend/: .gitignore  app.py  attestation_generator.py  check_batches.py  check_db.py  debug_inventory.py  demo_offline_traceability.py  gen_data.py  gen_qr_b1001.py  grapher.py  insight_generator.py  meta_profit_engine.py  meta_prophet_engine.py  neo4j_pusher.py  nlp_agent.py  out.txt  pyproject.toml  query_processor.py  report_agent.py  requirements.txt  signer_config.py  start.sh  test_api.py  test_attestation.py  test_fingerprint_error.py  test_forecast.py  test_meta_profit.py  test_out.txt  unified_chatbot.py
backend/NEW_DATA/: transaction_events.csv
backend/NEW_DATA/Scenario 1/: inventory_transforms.csv  transaction_events.csv
backend/fingerprint/: __init__.py  clustering.py  data_generator.py  feature_engineering.py  fingerprint_builder.py  insight_generator.py  inventory_transforms.csv  pipeline.py  preprocessor.py  scenario_data_generator.py  similarity.py  transaction_events.csv  verify_data.py
backend/problem_statement_3/: README.md
backend/routes/: __init__.py  attestation.py  chat.py  compliance.py  fingerprint.py  forecast.py  graph.py  health.py  lifecycle.py  meta_profit.py  report.py  sustainability.py  traceability.py
(+77 files in other folders)
