[project]
name = "backend"
version = "0.1.0"
description = "RecycleIT Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.11.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "kuzu>=0.11.3",
    "langchain>=1.2.13",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=2.0.0",
    "markupsafe>=3.0.3",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "flask>=3.1.3",
    "neo4j>=6.1.0",
    "scikit-learn>=1.8.0",
    "eth-account>=0.13.7",
    "pillow>=12.1.1",
    "opencv-python>=4.13.0.92",
    "pyzbar>=0.1.9",
    "ecdsa>=0.19.1",
    "eth-keys>=0.7.0",
    "qrcode>=8.2",
    "prophet>=1.3.0",
    "bitarray>=3.8.0",
]
